--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 <body class="container">
 <div class="row">
 
     <div class="col-10">
+        <a th:href="@{${backPath}}" style="float: left" class="btn btn-warning"><i class="fas fa-arrow-left"></i></a>
         <form th:object="${file}"  th:action="@{${savePath}}" method="post">
-            <h1>Editing File  : <th:block th:text="${name}"></th:block></h1>
+            <h1 style="text-align: center">Editing File  : <th:block th:text="${name}"></th:block></h1>
             <div class="form-group">
                 <label for="exampleInputEmail1">File Content</label>
                 <textarea  th:field="*{content}" name="content" style="min-height: 500px" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
