--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body class="container">
-<form th:object="${directory}" th:action="@{/directory}" method="post" >
+<form  th:object="${directory}" th:action="@{/directory}" method="post" >
 
-    <div class="form-group">
+    <div  class="form-group">
         <label for="path">Root dir</label>
-        <input th:field="*{path}" type="text" class="form-control" name="path" id="path" aria-describedby="root" placeholder="Enter root dir">
+        <input th:field="*{path}" type="text" class="form-control col-5" name="path" id="path" aria-describedby="root" placeholder="Enter root dir">
         <small th:if="${error != null}" id="root" class="form-text text-muted">
             <span class="text-danger"><th:block th:text="${error}"/></span>
         </small>
