--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -7,10 +7,10 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body class="container">
-<h1>
+<h1 style="text-align: center">
     Are you sure you wanna continue this action
 </h1>
-<div class="row">
+<div  class="row">
     <div class="col-6"><a th:href="@{${previous}}" class="btn btn-success">Cancel</a></div>
     <div class="col-6"><a style="float: right" th:href="@{${next}}" class="btn btn-danger">Confirm</a></div>
 </div>
