--- a/src/main/resources/templates/dir.html
+++ b/src/main/resources/templates/dir.html
@@ -73,9 +73,22 @@
 
         </td>
         <td>
-            <a th:href="@{${dir.path}}" class="btn btn-primary">Open</a>
-            <a th:href="@{${dir.zipPath}}" class="btn btn-info">Zip Dir</a>
-            <a th:href="@{${dir.deletePath}}" class="btn btn-danger">Delete</a>
+            <div class="dropdown show">
+                <a aria-expanded="false" aria-haspopup="true" class="btn btn-info dropdown-toggle"
+                   data-toggle="dropdown" href="#" id="dropdownMenuLink!" role="button">
+
+                </a>
+
+                <div aria-labelledby="dropdownMenuLink!" class="dropdown-menu">
+                    <a class="dropdown-item" th:href="@{${dir.path}}">Open</a>
+                    <a class="dropdown-item" th:href="@{${dir.zipPath}}">Zip Dir</a>
+                    <a class="dropdown-item" th:href="@{${dir.downloadPath}}">Download</a>
+                    <a class="dropdown-item" th:href="@{${dir.deletePath}}">Delete</a>
+
+                </div>
+            </div>
+
+
         </td>
     </tr>
     <tr th:each="file :${files}">
@@ -100,9 +113,20 @@
 
         </td>
         <td>
-            <a th:if="${!file.archived}" th:href="@{${file.editPath}}" class="btn btn-warning">Edit Content</a>
-            <a th:if="${file.archived}" th:href="@{${file.unzipPath}}" class="btn btn-warning">Unzip</a>
-            <a th:href="@{${file.deletePath}}" class="btn btn-danger">Delete</a>
+            <div class="dropdown show">
+                <a aria-expanded="false" aria-haspopup="true" class="btn btn-primary dropdown-toggle"
+                   data-toggle="dropdown" href="#" id="dropdownMenuLink" role="button">
+
+                </a>
+
+                <div aria-labelledby="dropdownMenuLink" class="dropdown-menu">
+                    <a class="dropdown-item" th:href="@{${file.editPath}}" th:if="${!file.archived}">Edit Content</a>
+                    <a class="dropdown-item" th:href="@{${file.unzipPath}}" th:if="${file.archived}">Unzip</a>
+                    <a class="dropdown-item" th:href="@{${file.downloadPath}}">Download</a>
+                    <a class="dropdown-item" th:href="@{${file.deletePath}}">Delete</a>
+                </div>
+            </div>
+
         </td>
     </tr>
 
