--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,14 +13,14 @@
             <form th:action="@{/login}" th:method="post">
                 <div class="form-group">
                     <label for="exampleInputEmail1">User Name</label>
-                    <input name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
                      </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
                     <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
     </div>
