--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <div class="row justify-content-md-center" style="margin-top: 200px">
     <div class="card col-8 ">
         <div class="card-body">
-            <form method="post" th:action="@{/directory}" th:object="${directory}">
+            <form method="post" th:action="@{open/dir/}" th:object="${directory}">
                 <div class="form-group" style="text-align: center">
                     <div class="input-group mb-3">
                         <input aria-describedby="basic-addon2" aria-label="Recipient's username" class="form-control"
